@@ -11,7 +11,7 @@ enum{
   PHCONV_HELP,
   PHCONV_INVALID
 };
-zOption option[] = {
+zOption phconv_option[] = {
   { "i", "in",    "<input file>",  "input STL/PLY/ZTK file", NULL, false },
   { "o", "out",   "<output file>", "output STL/PLY/ZTK file", NULL, false },
   { "a", "ascii", NULL,            "output ASCII STL/PLY file", NULL, false },
@@ -26,7 +26,7 @@ zOption option[] = {
 void phconv_usage(char *arg)
 {
   eprintf( "Usage: %s [options] <input file> <output file>", arg );
-  zOptionHelp( option );
+  zOptionHelp( phconv_option );
   exit( EXIT_SUCCESS );
 }
 
@@ -36,23 +36,23 @@ bool phconv_cmdarg(int argc, char *argv[])
   char *srcfile, *dstfile;
 
   if( argc <= 1 ) phconv_usage( argv[0] );
-  zOptionRead( option, argv+1, &arglist );
-  if( option[PHCONV_HELP].flag ) phconv_usage( argv[0] );
+  zOptionRead( phconv_option, argv+1, &arglist );
+  if( phconv_option[PHCONV_HELP].flag ) phconv_usage( argv[0] );
   zStrListGetPtr( &arglist, 2, &srcfile, &dstfile );
   if( srcfile ){
-    option[PHCONV_INPUTFILE].flag = true;
-    option[PHCONV_INPUTFILE].arg  = srcfile;
+    phconv_option[PHCONV_INPUTFILE].flag = true;
+    phconv_option[PHCONV_INPUTFILE].arg  = srcfile;
   }
   if( dstfile ){
-    option[PHCONV_OUTPUTFILE].flag = true;
-    option[PHCONV_OUTPUTFILE].arg  = dstfile;
+    phconv_option[PHCONV_OUTPUTFILE].flag = true;
+    phconv_option[PHCONV_OUTPUTFILE].arg  = dstfile;
   }
 
-  if( !option[PHCONV_INPUTFILE].flag ){
+  if( !phconv_option[PHCONV_INPUTFILE].flag ){
     eprintf( "input file not specified.\n" );
     exit( EXIT_FAILURE );
   }
-  if( !option[PHCONV_OUTPUTFILE].flag ){
+  if( !phconv_option[PHCONV_OUTPUTFILE].flag ){
     eprintf( "output file not specified.\n" );
     exit( EXIT_FAILURE );
   }
@@ -64,9 +64,9 @@ bool phconv_read_stl(zShape3D *shape)
 {
   bool ret = true;
 
-  eprintf( "read STL file.\n" );
+  eprintf( "read a STL file.\n" );
   zShape3DInit( shape );
-  if( !zShape3DReadFileSTL( shape, option[PHCONV_INPUTFILE].arg ) ){
+  if( !zShape3DReadFileSTL( shape, phconv_option[PHCONV_INPUTFILE].arg ) ){
     eprintf( "read failure.\n" );
     ret = false;
   }
@@ -76,9 +76,9 @@ bool phconv_read_stl(zShape3D *shape)
 bool phconv_read_ply(zShape3D *shape)
 {
   bool ret = true;
-  eprintf( "read PLY file.\n" );
+  eprintf( "read a PLY file.\n" );
   zShape3DInit( shape );
-  if( !zShape3DReadFilePLY( shape, option[PHCONV_INPUTFILE].arg ) ){
+  if( !zShape3DReadFilePLY( shape, phconv_option[PHCONV_INPUTFILE].arg ) ){
     eprintf( "read failure.\n" );
     ret = false;
   }
@@ -89,14 +89,15 @@ bool phconv_read(zShape3D *shape)
 {
   char *suffix;
 
-  suffix = zGetSuffix( option[PHCONV_INPUTFILE].arg );
+  zShape3DInit( shape );
+  suffix = zGetSuffix( phconv_option[PHCONV_INPUTFILE].arg );
   if( strcmp( suffix, "stl" ) == 0 || strcmp( suffix, "STL" ) == 0 )
     return phconv_read_stl( shape );
   if( strcmp( suffix, "ply" ) == 0 || strcmp( suffix, "PLY" ) == 0 )
     return phconv_read_ply( shape );
   if( strcmp( suffix, "ztk" ) == 0 || strcmp( suffix, "ZTK" ) == 0 ){
-    eprintf( "read ZTK file.\n" );
-    if( !zShape3DReadZTK( shape, option[PHCONV_INPUTFILE].arg ) ){
+    eprintf( "read a ZTK file.\n" );
+    if( !zShape3DReadZTK( shape, phconv_option[PHCONV_INPUTFILE].arg ) ){
       eprintf( "read failure.\n" );
       return false;
     }
@@ -110,15 +111,15 @@ bool phconv_write_stl(zShape3D *shape)
 {
   FILE *fout;
 
-  if( !( fout = fopen( option[PHCONV_OUTPUTFILE].arg, "w" ) ) ){
-    ZOPENERROR( option[PHCONV_OUTPUTFILE].arg );
+  if( !( fout = fopen( phconv_option[PHCONV_OUTPUTFILE].arg, "w" ) ) ){
+    ZOPENERROR( phconv_option[PHCONV_OUTPUTFILE].arg );
     return false;
   }
-  if( option[PHCONV_BINARY].flag ){
-    eprintf( "write binary STL file.\n" );
+  if( phconv_option[PHCONV_BINARY].flag ){
+    eprintf( "write a binary STL file.\n" );
     zPH3DFWriteSTL_Bin( fout, zShape3DPH(shape), zName(shape) );
   } else{
-    eprintf( "write ASCII STL file.\n" );
+    eprintf( "write an ASCII STL file.\n" );
     zPH3DFWriteSTL_ASCII( fout, zShape3DPH(shape), zName(shape) );
   }
   fclose( fout );
@@ -127,12 +128,12 @@ bool phconv_write_stl(zShape3D *shape)
 
 bool phconv_write_ply(zShape3D *shape)
 {
-  if( option[PHCONV_BINARY].flag ){
-    eprintf( "write binary PLY file.\n" );
-    zPH3DWriteFilePLY_Bin( zShape3DPH(shape), option[PHCONV_OUTPUTFILE].arg );
+  if( phconv_option[PHCONV_BINARY].flag ){
+    eprintf( "write a binary PLY file.\n" );
+    zPH3DWriteFilePLY_Bin( zShape3DPH(shape), phconv_option[PHCONV_OUTPUTFILE].arg );
   } else{
-    eprintf( "write ASCII PLY file.\n" );
-    zPH3DWriteFilePLY_ASCII( zShape3DPH(shape), option[PHCONV_OUTPUTFILE].arg );
+    eprintf( "write an ASCII PLY file.\n" );
+    zPH3DWriteFilePLY_ASCII( zShape3DPH(shape), phconv_option[PHCONV_OUTPUTFILE].arg );
   }
   return true;
 }
@@ -141,9 +142,9 @@ bool phconv_xform(zShape3D *shape)
 {
   zFrame3D frame;
 
-  sscanf( option[PHCONV_TRANSLATE].arg, "%lf %lf %lf",
+  sscanf( phconv_option[PHCONV_TRANSLATE].arg, "%lf %lf %lf",
     &frame.pos.c.x, &frame.pos.c.y, &frame.pos.c.z );
-  sscanf( option[PHCONV_ROTATE].arg, "%lf %lf %lf %lf %lf %lf %lf %lf %lf",
+  sscanf( phconv_option[PHCONV_ROTATE].arg, "%lf %lf %lf %lf %lf %lf %lf %lf %lf",
     &frame.att.c.xx, &frame.att.c.xy, &frame.att.c.xz,
     &frame.att.c.yx, &frame.att.c.yy, &frame.att.c.yz,
     &frame.att.c.zx, &frame.att.c.zy, &frame.att.c.zz );
@@ -155,18 +156,18 @@ bool phconv_write(zShape3D *shape)
 {
   char *suffix;
 
-  if( option[PHCONV_TRANSLATE].flag || option[PHCONV_ROTATE].flag )
+  if( phconv_option[PHCONV_TRANSLATE].flag || phconv_option[PHCONV_ROTATE].flag )
     phconv_xform( shape );
-  if( option[PHCONV_SCALE].flag )
-    zPH3DScale( zShape3DPH(shape), atof( option[PHCONV_SCALE].arg ) );
-  suffix = zGetSuffix( option[PHCONV_OUTPUTFILE].arg );
+  if( phconv_option[PHCONV_SCALE].flag )
+    zPH3DScale( zShape3DPH(shape), atof( phconv_option[PHCONV_SCALE].arg ) );
+  suffix = zGetSuffix( phconv_option[PHCONV_OUTPUTFILE].arg );
   if( strcmp( suffix, "stl" ) == 0 || strcmp( suffix, "STL" ) == 0 )
     return phconv_write_stl( shape );
   if( strcmp( suffix, "ply" ) == 0 || strcmp( suffix, "PLY" ) == 0 )
     return phconv_write_ply( shape );
   if( strcmp( suffix, "ztk" ) == 0 || strcmp( suffix, "ZTK" ) == 0 ){
-    eprintf( "write ZTK file.\n" );
-    return zShape3DWriteZTK( shape, option[PHCONV_OUTPUTFILE].arg );
+    eprintf( "write a ZTK file.\n" );
+    return zShape3DWriteZTK( shape, phconv_option[PHCONV_OUTPUTFILE].arg );
   }
   eprintf( "unknown file type.\n" );
   return false;
@@ -175,10 +176,11 @@ bool phconv_write(zShape3D *shape)
 int main(int argc, char *argv[])
 {
   zShape3D shape;
+  int retval = EXIT_FAILURE;
 
   if( !phconv_cmdarg( argc, argv ) ) return EXIT_FAILURE;
   if( phconv_read( &shape ) )
-    phconv_write( &shape );
+    if( phconv_write( &shape ) ) retval = EXIT_SUCCESS;
   zShape3DDestroy( &shape );
-  return 0;
+  return retval;
 }
