@@ -1,3 +1,3 @@
 PROJNAME=zeo
-VERSION=1.17.12
-DEPENDENCY="zeda=1.10.0;zm=1.9.17"
+VERSION=1.17.13
+DEPENDENCY="zeda=1.10.1;zm=1.9.17"
